# PyADRL

./: .gitignore  .gitmodules  README.md  build.sh  build_mac.sh  check_models.py  check_tuner.py  eval.py  flake.nix  grid_world_pb2.py  grid_world_pb2.pyi  grid_world_pb2_grpc.py  main.py  parser.py  pyproject.toml  pyrightconfig.json  requirements.txt  shell.nix  train.py  tune.py
.github/workflows/: pyright.yml  ruff.yml
PyADRL/dtos/: map_dtos.py  ngw_dtos.py  request_dtos.py
PyADRL/envs/: gridworld_env.py  gridworld_env2.py  ngw_drone.py  ngw_env.py  threed_cont.py
PyADRL/envs/map_configs/: map_config.py  square_map.py
PyADRL/envs/reward_functions/: grid_world_rewards.py  rewards.py
PyADRL/evaluation/: metrics.py
PyADRL/examples/: gridworld.py  gridworld_eval.py  gridworld_new.py  gridworld_train.py  gridworld_tuner.py  threed.py
PyADRL/examples/maps/: map.json  map2.json  map_21_21_clean.json
PyADRL/examples/trainables/: alternate_training.py  (+1 more)
PyADRL/logger/: __init__.py  heatmaps.py  metrics.py  metricslogger.py
PyADRL/shielding/: centralized_shield.py  object_collision_shield.py  shield.py
PyADRL/trainables/: alternating_training.py  iterative_training.py
PyADRL/utils/: chebeshyv.py  config_builder.py  gridworld_client.py  logger.py  map_load.py  model_save.py  ngw2d_actions.py  ngw2d_client.py  path_utils.py  paths.py  plot_training_rewards.py  protobuf_utils.py  register_env.py  reward_graph.py  save_info.py  tdclient.py  utility.py  utils.py
tests/: shield_tests.py  unit_test_example.py  utility_tests.py
utils/: metrics.py
