[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PyADRL"
version = "0.0.1"
description = "Python Area Defence Reinforcement Learning"
requires-python = ">=3.12"
dependencies = [
  "pettingzoo",
  "grpcio",
  "grpcio-tools",
  "gymnasium",
  "numpy",
  "protobuf",
  "ray",
  "dm-tree",
  "fsspec",
  "pandas",
  "torch",
  "pyarrow",
  "pydantic",
  "scipy",
]

[project.optional-dependencies]
dev = ["ruff"]

[tool.ruff]
line-length = 88

